--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ djangorestframework-simplejwt==5.2.2
 django-phonenumber-field==7.0.2
 django-phonenumbers==1.0.1
 django-multiselectfield==0.1.12
+django-cors-headers==3.14.0
